--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,10 @@ readme = "README.md"
 python = "^3.9"
 numpy = "^1.26.4"
 
+[tool.poetry.group.test.dependencies]
+pytest = "^8.0.0"
+hypothesis = "^6.100.1"
+
 
 [build-system]
 requires = ["poetry-core"]
