--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pldag"
-version = "0.6.2"
+version = "0.6.3"
 description = ""
 authors = ["znittzel <rikard@ourstudio.se>"]
 readme = "README.md"
@@ -8,6 +8,9 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.9"
 numpy = "^1.26.4"
+
+[tool.poetry.extras]
+glpk = ["npycvx"]
 
 [tool.poetry.group.test.dependencies]
 pytest = "^8.0.0"
