--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pldag"
-version = "0.9.7"
+version = "0.9.8"
 description = ""
 authors = ["znittzel <rikard@ourstudio.se>"]
 readme = "README.md"
@@ -8,14 +8,11 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.9"
 numpy = "^1.26.4"
-
-[tool.poetry.extras]
-glpk = ["npycvx"]
+npycvx = "^0.0.2"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^8.0.0"
 hypothesis = "^6.100.1"
-
 
 [build-system]
 requires = ["poetry-core"]
