--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pldag"
-version = "0.9.16"
+version = "0.9.17"
 description = ""
 authors = ["znittzel <rikard@ourstudio.se>"]
 readme = "README.md"
@@ -8,7 +8,12 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.9"
 numpy = "^1.26.4"
-npycvx = "^0.0.2"
+
+# Optional dependency
+npycvx = { version = "^0.0.2", optional = true }
+
+[tool.poetry.extras]
+cvx = ["npycvx"]
 
 [tool.poetry.group.test.dependencies]
 pytest = "^8.0.0"
